[HP-647] Prevent header menu links wrapping

--- a/site/assets/css/_sass/header.scss
+++ b/site/assets/css/_sass/header.scss
@@ -31,6 +31,10 @@
   }
 
   @media screen and (min-width: $screen-lg) {
+    width: 13rem;
+  }
+
+  @media screen and (min-width: $screen-xl) {
     width: 17.5rem;
   }
 }
@@ -50,20 +54,29 @@ a.header_nav__link {
   }
 }
 
-.nav {
-  margin-left: 7rem;
+.header_nav {
+  margin-left: 4rem;
+
+  @media screen and (min-width: $screen-xl) {
+    margin-left: 7rem;
+  }
 }
 
 // Buttons
 
 .header-button {
-  @include medium-text;
-  padding: 1.3rem 4rem 1.2rem;
+  @include small-text-v2;
+  padding: 1.3rem 3rem 1.2rem;
   white-space: nowrap;
 
   &:hover,
   &:active,
   &:focus {
+    padding: 1.3rem 4rem 1.2rem;
+  }
+
+  @media screen and (min-width: $screen-xl) {
+    @include medium-text;
     padding: 1.3rem 4rem 1.2rem;
   }
 }
@@ -114,7 +127,7 @@ a.header_nav__link {
 
 .header__dropdown-menu {
   background: var(--dark-purple-v2);
-  box-shadow: 0 8px 40px var(--grey-v4);
+  box-shadow: 0 0.8rem 4rem var(--grey-v4);
   padding: 1.8rem 2rem;
   border-radius: 0.5rem;
   left: -8.7rem !important;
@@ -131,9 +144,9 @@ a.header_nav__link {
 .header__dropdown-menu-arrow-up {
   width: 0;
   height: 0;
-  border-left: 8px solid transparent;
-  border-right: 8px solid transparent;
-  border-bottom: 10px solid var(--dark-purple-v2);
+  border-left: 0.8rem solid transparent;
+  border-right: 0.8rem solid transparent;
+  border-bottom: 10rem solid var(--dark-purple-v2);
   position: absolute;
   top: -0.8rem;
   left: 48%;
